--- a/fundamentos-angular/src/app/segundo-componente/segundo-componente.component.html
+++ b/fundamentos-angular/src/app/segundo-componente/segundo-componente.component.html
@@ -1,3 +1,5 @@
 <h2>segundo-componente works!</h2>
+<img [src]="urlImagem" width="300">
 <p>Nome: {{ nome | uppercase }}</p>
-<p>Data Nascimento: {{ dataNascimento | date: "dd/MM/yyyy"}}</p>
+<p class="anoFundacao">Ano Fundação: {{ anoFundacao | date: "yyyy"}}</p>
+<button (click)="mostrarAnoFundacao()">Mostrar Ano de Fundação</button>
