--- a/fundamentos-angular/src/app/app.component.html
+++ b/fundamentos-angular/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-segundo-componente></app-segundo-componente>
 <app-pipe-customizado></app-pipe-customizado>
 <app-two-way-data-binding></app-two-way-data-binding>
+<app-renderizando-listas></app-renderizando-listas>
+<app-componente-personalizado nome="Carlos" sobrenome="André"></app-componente-personalizado>
+<app-componente-personalizado nome="Edite" sobrenome="Santos"></app-componente-personalizado>
